@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+0715/08  Remi Ricard (papaDoc)
+        * Add a new define ODE_API_DEPRECATED to mark function as deprecated
+          when necessary.
+
 07/14/08 Remi Ricard (papaDoc)
         * Finish adding patch 1336066: Joint feedback in quickstep by jsinecky
         * demo_boxstack.cpp can now print joint feedback
